fix(module:table): fix clipped corners on small tables #2518

--- a/components/table/style/size.less
+++ b/components/table/style/size.less
@@ -104,6 +104,7 @@
     .@{table-prefix-cls}-placeholder,
     .@{table-prefix-cls}-row:last-child td {
       border-bottom: 0;
+      border-radius: @table-border-radius-base;
     }
   }
 
